my site with bootstrap

--- a/bootStrap/tutorial/index.html
+++ b/bootStrap/tutorial/index.html
@@ -9,7 +9,7 @@
     <title>Net Ninja pro</title>
 </head>
 <body>
-    <!-- <h1>Net Ninja Pro</h1>
+    <h1>Net Ninja Pro</h1>
     <h2>This is ans h2</h2>
     <h3>This is an h3</h3>
     <h2 class="h2">this is h32</h2>
@@ -29,9 +29,9 @@
     <p>Lorem ipsum dolor sit amet repellendus unde laudantium. Quae.</p>
     
     <p class="lead">Lorem ipsum dolor sit amet repellendus unde laudantium. Quae.</p>
-    <p class="lead text-center text-decoration-underlinefw-bold">Hello Ninjas</p>
+    <p class="lead text-center text-decoration-under-lined">Hello Ninjas</p>
     <p class="lead text-start">Hello Ninjas</p>
-    <p class="lead text-end  text-decoration-line-through ">Hello Ninjas</p> -->
+    <p class="lead text-end  text-decoration-line-through ">Hello Ninjas</p>
     
 <h2>Buttons</h2>
 <button class="btn btn-primary">primary button</button>
